force-app/main/default/objects/seguimiento_de_proyecto__c/seguimiento_de_proyecto__c.object-meta.xml
<CustomObject>
    <description>ayuda a realizar un seguimiento del proyecto</description>
    <label>Seguimiento de proyecto</label>
    <nameField>
        <displayFormat>SPR-{000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimientos de proyecto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>