force-app/main/default/objects/seguimiento_de_proyecto__c/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>casilla de verificacion para saber si ese seguimiento de proyecto se dio por aprobado</description>
    <label>Aprobado?</label>
    <type>Checkbox</type>
</CustomField>