force-app/main/default/objects/seguimiento_de_proyecto__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <description>Comentario o feedback para el seguimiento del proyecto</description>
    <label>Comentario</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>