force-app/main/default/objects/seguimiento_de_proyecto__c/fields/Miembro_de_la_cohorte__c.field-meta.xml
<CustomField>
    <fullName>Miembro_de_la_cohorte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona el proyecto a un miembro y a su cohorte</description>
    <label>Miembro de la cohorte</label>
    <referenceTo>Miembro_de_la_cohorte__c</referenceTo>
    <relationshipName>seguimientos_de_proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>