force-app/main/default/objects/seguimiento_de_proyecto__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <description>Calificacion o resultado que se le dara a ese seguimiento</description>
    <label>Resultado</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>