force-app/main/default/objects/seguimiento_de_proyecto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Miembro_de_la_cohorte__c</columns>
    <columns>Comentario__c</columns>
    <columns>Resultado__c</columns>
    <columns>Aprobado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>